--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,24 @@
-.App {
-  text-align: center;
+.app {
+  background: #209cee;
+  padding: 30px;
+  height: 100vh;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.hook-list {
+  background: #e8e8e8;
+  border-radius: 4px;
+  padding: 5px;
+  max-width: 400px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hook-list-items {
+  background: rgb(13, 55, 66, 0.8);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+  padding: 2rem 5rem;
+  font-size: 2rem;
+  margin-bottom: 1.8rem;
+  border-radius: 2rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  justify-content: space-between;
 }
