--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,25 @@
 .app {
-  background: #209cee;
+  background: rgb(23, 155, 66, 0.7);
   padding: 30px;
   height: 100vh;
 }
 
 .hook-list {
   background: #e8e8e8;
-  border-radius: 4px;
+  border-radius: 3rem;
   padding: 5px;
   max-width: 400px;
+  text-align: center;
 }
 
 .hook-list-items {
-  background: rgb(13, 55, 66, 0.8);
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-  padding: 2rem 5rem;
-  font-size: 2rem;
+  background: rgba(32, 136, 161, 0.8);
+  box-shadow: 1px 1px 1px rgba(1, 1, 1, 1);
+  padding: 5rem 5rem;
+  margin: 2rem 3rem;
+  font-size: 3rem;
   margin-bottom: 1.8rem;
-  border-radius: 2rem;
+  border-radius: 3rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
 }
