--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,25 @@
 .app {
   background: rgb(23, 155, 66, 0.7);
-  padding: 30px;
+  padding: 3rem;
   height: 100vh;
 }
 
 .hook-list {
-  background: #e8e8e8;
-  border-radius: 3rem;
-  padding: 5px;
-  max-width: 400px;
-  text-align: center;
+  background: rgb(148, 102, 102);
+  border-radius: 1rem;
+  padding: 1rem;
+  max-width: 100%;
+  display: flex;
 }
 
 .hook-list-items {
-  background: rgba(32, 136, 161, 0.8);
-  box-shadow: 1px 1px 1px rgba(1, 1, 1, 1);
-  padding: 5rem 5rem;
-  margin: 2rem 3rem;
-  font-size: 3rem;
-  margin-bottom: 1.8rem;
-  border-radius: 3rem;
-  display: flex;
+  background: rgb(179, 11, 11);
+  box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, 0.5);
+  padding: 1rem 1rem;
+  font-size: 1rem;
+  margin: 0.5rem;
+  border-radius: 1rem;
+  display: inline-block;
   align-items: center;
+  justify-content: space-between;
 }
